<resources>
    <string name="app_name">My Plans</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="semester">Semester</string>
    <string name="course">Course</string>
    <string name="homework">Homework</string>
    <string name="tasks">Tasks</string>
    <string name="setting">Setting</string>
    <string name="quiz">Quiz</string>
    <string name="day">Day</string>
    <string name="calendar">Calendar</string>
    <string name="preference_file_key">com.example.myplans.PREFERENCE_FILE_KEY</string>
    <string name="week">Week</string>
    <string name="add">add</string>
    <string name="search">Search</string>
    <string name="meeting">Meeting</string>
    <string name="your_class">Your Class</string>
    <string name="home">Home</string>
    <string name="icon_course">icon course</string>
    <string name="textview">TextView</string>
    <string name="icon_date">icon date</string>
    <string name="your_homework">Your HomeWork</string>
    <string name="icon_homework">icon homework</string>
    <string name="your_task">Your Task</string>
    <string name="your_quiz">Your Quiz</string>
    <string name="completed">Completed</string>
    <string name="icon_task">icon task</string>
    <string name="icon_quiz">icon quiz</string>
    <string name="new_meeting">New Meeting</string>
    <string name="update">Update</string>

    <string name="delete"> Delete</string>
    <string name="start_learning">Start learning</string>
    <string name="please_write_the_name_semester">Please write the name semester</string>
    <string name="_2022_summer_2022">2022, Summer 2022</string>
    <string name="course_name">course name</string>
    <string name="days">Days</string>
    <string name="choose_time">Choose time</string>
    <string name="start_time">Start Time</string>
    <string name="choose_days">Choose Days</string>
    <string name="end_time">End Time</string>
    <string name="every_week">Every Week</string>
    <string name="choose_course">Choose Course</string>
    <string name="choose_type_of_the_class">Choose type of the class</string>
    <string name="see_more">See More</string>
    <string name="choose_your_course">Choose your course</string>
    <string name="add_a_new_course">Add a new course</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="choose_day">Choose day</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="class_name">Class Name</string>
    <string name="description">Description</string>
    <string name="new_course">New Course</string>
    <string name="choose_the_day">Choose the day</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="error_course">Please choose the course</string>
    <string name="error_day">Please choose the day</string>
    <string name="error_time">Please choose the time</string>
    <string name="error_date">Please choose the date</string>
    <string name="new_homework">New HomeWork</string>
    <string name="new_class">New Class</string>
    <string name="choose_date">Choose Date</string>
    <string name="add_reminder">Add Reminder...</string>
    <string name="fill_title">"Please fill in the title"</string>
    <string name="add_your_plan_now">Add Your Plan Now</string>
    <string name="ok">Ok</string>
    <string-array name="array_days">
        <item>@string/sunday</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>

</resources>