<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_plan_view"
        android:icon="@drawable/ic_baseline_calendar_view_week_24"
        android:title="@string/week" />
    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title="" />
    <item
        android:title="@string/calendar"
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_baseline_calendar_today_24" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting" />
</menu>