<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_sc"
    android:fillViewport="true"
    android:paddingBottom="56dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_sc"
        tools:context=".activities.AddClassesActivity">


        <Button
            android:id="@+id/btChooseCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/white_sc"
            android:hint="@string/choose_course"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btTypeClass" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableStart="@drawable/ic_day"
                android:drawablePadding="2dp"
                android:fontFamily="@font/avenir_regular"
                android:text="@string/days"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btDays"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_sc"
                android:text="@string/choose_days"
                android:textAllCaps="false"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_margin="8dp"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="2dp"
                android:fontFamily="@font/avenir_regular"
                android:text="@string/start_time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btStartTime"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_sc"
                android:text="@string/choose_time"
                android:textAllCaps="false"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:fontFamily="@font/avenir_regular"
                android:text="@string/end_time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btEndTime"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_sc"
                android:text="@string/choose_time"
                android:textAllCaps="false"
                android:textColor="@color/gray" />
        </LinearLayout>

        <Button
            android:id="@+id/btrepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white_sc"
            android:drawableEnd="@drawable/ic_repeat"
            android:text="@string/every_week"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

        <Button
            android:id="@+id/btTypeClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white_sc"
            android:text="@string/choose_type_of_the_class"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btChooseCourse" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>