<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:animationCache="false"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageCourse"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/icon_course"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_book" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                     />

                <TextView
                    android:id="@+id/tvCourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/textview"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ic_baseline_calendar_month_24"
                    android:drawablePadding="5dp"
                    android:text="@string/day" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ic_baseline_access_time_24"
                    android:drawablePadding="5dp"
                    android:text="@string/textview" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewOptions"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="⋮"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
